🚧 add item / id cmds to new interface